rank5の含むwordの雛形を追加

--- a/words.yml
+++ b/words.yml
@@ -404,6 +404,106 @@ words:
     word399:
     word400:
   rank5:
+    word401:
+    word402:
+    word403:
+    word404:
+    word405:
+    word406:
+    word407:
+    word408:
+    word409:
+    word410:
+    word411:
+    word412:
+    word413:
+    word414:
+    word415:
+    word416:
+    word417:
+    word418:
+    word419:
+    word420:
+    word421:
+    word422:
+    word423:
+    word424:
+    word425:
+    word426:
+    word427:
+    word428:
+    word429:
+    word430:
+    word431:
+    word432:
+    word433:
+    word434:
+    word435:
+    word436:
+    word437:
+    word438:
+    word439:
+    word440:
+    word441:
+    word442:
+    word443:
+    word444:
+    word445:
+    word446:
+    word447:
+    word448:
+    word449:
+    word450:
+    word451:
+    word452:
+    word453:
+    word454:
+    word455:
+    word456:
+    word457:
+    word458:
+    word459:
+    word460:
+    word461:
+    word462:
+    word463:
+    word464:
+    word465:
+    word466:
+    word467:
+    word468:
+    word469:
+    word470:
+    word471:
+    word472:
+    word473:
+    word474:
+    word475:
+    word476:
+    word477:
+    word478:
+    word479:
+    word480:
+    word481:
+    word482:
+    word483:
+    word484:
+    word485:
+    word486:
+    word487:
+    word488:
+    word489:
+    word490:
+    word491:
+    word492:
+    word493:
+    word494:
+    word495:
+    word496:
+    word497:
+    word498:
+    word499:
+    word500:
   rank6:
   rank7:
   rank8:
